--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    box-sizing: border-box;
     background-color: linen;
 }
 
@@ -13,6 +14,8 @@ body{
 }
 
 h1{
+    box-sizing: border-box;
+
     display: inline;
 
     font-family: Title Font;
@@ -25,6 +28,8 @@ h1{
 
 
 h2{
+    box-sizing: border-box;
+
     display: block;
 
     font-family: Title Font;
@@ -38,6 +43,8 @@ h2{
 }
 
 p{
+    box-sizing: border-box;
+
     display: block;
     font-size: 40px;
     text-align: center;
