--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
 
 h1{
     box-sizing: border-box;
+    padding: 10px;
 
     display: inline;
 
@@ -29,6 +30,7 @@ h1{
 
 h2{
     box-sizing: border-box;
+    padding: 10px;
 
     display: block;
 
@@ -44,9 +46,15 @@ h2{
 
 p{
     box-sizing: border-box;
+    padding: 10px;
 
     display: block;
     font-size: 40px;
     text-align: center;
     font-family: Paragraph Font;
+}
+
+div{
+    box-sizing: border-box;
+    padding: 10px;
 }
