--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     background-color: linen;
 }
 
+
 @font-face{
     font-family: Title Font;
     src: url("/oregano.ttf");
@@ -22,7 +23,7 @@ h1{
     font-family: Title Font;
     color:rgb(235, 175, 107);
 
-    font-size: 400px;
+    font-size: 25vw;
 
     text-align: center;
 }
